tests/baselines/reference/bestCommonTypeReturnStatement.errors.txt
tests/cases/compiler/bestCommonTypeReturnStatement.ts(7,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/bestCommonTypeReturnStatement.ts (1 errors) ====
    interface IPromise<T> {
        then(successCallback: (promiseValue: T) => any, errorCallback?: (reason: any) => any): IPromise<any>;
    }
    
    function f() {
        if (true) return b();
        return d();
        ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    
    function b(): IPromise<void> { return null; }
    function d(): IPromise<any> { return null; }